<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TravelAssistance</string>
    <string name="route_stop_recording">Stop recording</string>
    <string name="saveRoute">Save route</string>
    <string name="noRouteToSave">No tracked route to save.</string>
    <string name="saved">Saved</string>
    <string name="noRoutes">No routes</string>
    <string name="tap_to_return">Tap to return to application</string>
    <string name="lost_sms_message_template">I am lost. I am at %1$s +- %2$.0f m, data from %3$s.</string>
    <string name="unknown_position">Unknown</string>
    <string name="help_send_sms">Send help sms</string>
    <string name="help_send_email">Send email</string>
    <string name="no_position">No position</string>
    <string name="sent">Sent</string>
    <string name="not_sent">Message not sent</string>
    <string name="i_am_lost">I am lost</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="assistant_email">Assistant email</string>
    <string name="assistant_phone">Assistant phone</string>
    <string name="no_assistant_number">No assistant number</string>
    <string name="navigate">Navigate</string>
    <string name="not_implemented">Not implemented now</string>
    <string name="transport_change_title">Change title</string>
    <string name="transport_change_select">Select transport type</string>
    <string name="title_activity_route_record">Recording</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="cannot_get_pictures">Cannot get image</string>
    <string name="photo_preview">Photo preview</string>
    <string name="caption">Caption</string>
    <string name="record_add_photo">Add photo</string>
    <string name="record_add_note">Add note</string>
    <string name="record_add_voice">Add voice record</string>
    <string name="voice_record_speak_now">Speak now</string>
    <string name="voice_record_title_hint">Title</string>
    <string name="record_voice_saved">Recording saved</string>
    <string name="navigation_arrow_description">Desired direction</string>
    <string name="record_start_record_route">Record route</string>
    <string name="route_title">Route title</string>
    <string name="route_default_title">Route from %s</string>
    <string name="routes">Routes</string>
    <string name="help_request">Request help</string>
    <string name="sound_record_listening">Listening…</string>
    <string name="sound_record_title">Voice Recording</string>
    <string name="more">More</string>
    <string name="nfc_write">Write NFC tag</string>
    <string name="title_activity_write_nfc">NFC tag write</string>

    <string name="nfc_write_description">Move NFC tag next the device</string>
    <string name="nfc_write_success">Route successfully written</string>
    <string name="route_icon">Route icon</string>
    <string name="help_call">Call</string>
    <string name="help_no_app_for_email">No app for email</string>
    <string name="no_app_for_call">Phone call cannot be performed.</string>
    <string name="nfc_not_supported">Device does not support NFC</string>
    <string name="nfc_error_write">Error writing NFC tag</string>
    <string name="nfc_try_again">Try again</string>
    <string name="nfc_write_nfc_off">NFC is disabled, tap to enable</string>
    <string name="route_nfc_not_found_title">Route not found</string>
    <string name="route_nfc_not_found_message">Route from NFC tag not found. It was probably deleted.\nYou can write new route to the tag.</string>
    <string name="sound_record_stop">Stop voice recording</string>
    <string name="sound_record_save">Save recording</string>
    <string name="transport_walking">Walking</string>
    <string name="transport_bus">Bus</string>
    <string name="transport_tram">Tram</string>
    <string name="navigation_arrow_user_direction_description">User direction</string>
    <string name="google_services_error_title">Google Account Error</string>
    <string name="google_services_error_default_message">Error during connection to Google Account Services\nError=\'%s\'</string>

    <string name="record_prompt_title">Recording on</string>
    <string name="record_prompt_message">You are recording route, do you want to continue recording or you really want to finish?</string>
    <string name="record_prompt_button_continue">Continue</string>
    <string name="record_prompt_button_finish">Finish</string>
    <string name="about">Application should help the people with mental disabilities to better learn their usual daily routes.</string>
    <string name="about_feedback">Feedback</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_description">Please tell us what you think.\nIf you want to be contacted to discuss details include any type of contact.</string>
    <string name="feedback_title_hint">Feedback title *</string>
    <string name="feedback_body_hint">What do you think…</string>
    <string name="feedback_error_empty_title">Please fill the title</string>
    <string name="feedback_error_send_error">There was some issue sending feedback, sorry.</string>
    <string name="thank_you_for_feedback">Thank you very much for feedback.</string>
    <string name="photo">Photo</string>
    <string name="route_record_picture_error_message">Unexpected error</string>
    <string name="route_record_error_send">Send</string>
    <string name="settings_backup">Backup</string>
    <string name="settings_restore">Restore</string>
    <string name="settings_last_backup_time">Backup from %1$s</string>
    <string name="backup_dialog_progress_message">Creating backup…</string>
    <string name="restore_dialog_progress_message">Restoring data…\nIt can take some time</string>
    <string name="restore_dialog_progress_title">Restoring data</string>
    <string name="backup_dialog_progress_title">Backing up</string>
    <string name="backup_success_message">Backup successful</string>
    <string name="restore_success_message">Backup restore successful</string>
    <string name="backup_error_drive_authorization">Error authorizing Google Drive</string>
    <string name="backup_error_drive_authorization_offline">Cannot authorize Google Drive offline</string>
    <string name="backup_error_generic">Some problem creating backup</string>
    <string name="backup_resolve_error_generic">Problem resolving backup</string>
    <string name="backup_restore_snackbar_action">View</string>
    <string name="settings_backup_title">Data backup</string>
    <string name="select_route_icon">Select route icon</string>
    <string name="pick_route_icon">Pick Route icon</string>
    <string name="record_tracking_now">Recording now…</string>
    <string name="record_button_showcase_title">Recording</string>
    <string name="record_button_showcase_subtitle">Tap the button to start route recording</string>
    <string name="record_unsaved_prompt_message">Recording is not saved, do you really want to stop?</string>

</resources>
