<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.RoutesListActivity">

    <item
        android:id="@+id/action_routes_recording"
        android:title="@string/title_activity_route_record"
        android:icon="@drawable/ic_smart_record_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_routes_help"
        android:title="@string/i_am_lost"
        android:icon="@drawable/ic_person_pin_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_routes_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
</menu>