<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium">

    <ImageView
        android:id="@+id/record_photo_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/photo_preview"
        android:scaleType="centerCrop"
        tools:src="@drawable/map_placeholder"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/record_photo_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextMain"
        tools:text="@string/assistant_email"
        android:hint="@string/caption"
        android:layout_gravity="bottom"/>
</FrameLayout>