<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@android:drawable/list_selector_background"
    android:id="@+id/route_item_container">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/route_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginTop="@dimen/list_item_vertical_margin"
        android:layout_marginLeft="@dimen/side_padding"
        android:layout_marginRight="@dimen/side_padding"
        android:src="@drawable/route_placeholder" />

    <TextView
        android:id="@+id/route_title"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/list_item_vertical_margin"
        android:layout_toEndOf="@id/route_icon"
        android:layout_toRightOf="@id/route_icon"
        android:layout_toLeftOf="@+id/route_navigate"
        android:layout_toStartOf="@+id/route_navigate"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="end"
        android:textSize="@dimen/textTitle"
        android:textColor="@color/textMain"
        tools:text="Long title when the user types too much" />

    <TextView
        android:id="@+id/route_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/route_icon"
        android:layout_toRightOf="@id/route_icon"
        android:layout_below="@id/route_title"
        android:textSize="@dimen/textSubtitle"
        android:textColor="@color/textSecondary"
        tools:text="Date" />

    <TextView
        android:id="@+id/route_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_padding"
        android:layout_marginStart="@dimen/side_padding"
        android:layout_toRightOf="@id/route_date"
        android:layout_toEndOf="@id/route_date"
        android:layout_below="@id/route_title"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/textSubtitle"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/route_navigate"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginTop="@dimen/list_item_vertical_margin"
        android:padding="@dimen/padding_medium"
        android:src="@drawable/ic_navigation_black_24dp"
        android:clickable="true"
        android:layout_toLeftOf="@+id/route_item_more"
        android:layout_toStartOf="@+id/route_item_more"
        android:background="@android:drawable/list_selector_background"
        android:contentDescription="@string/navigate" />


    <ImageView
        android:id="@+id/route_item_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_small"
        android:layout_marginTop="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_small"
        android:layout_marginEnd="@dimen/padding_small"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_more_vert_black_24dp"
        android:clickable="true"
        android:background="@android:drawable/list_selector_background"
        android:contentDescription="@string/more" />

</RelativeLayout>